--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
