--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
+    "jose": "^6.0.12",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
