--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "firebase-admin": "^13.4.0",
     "jose": "^6.0.12",
     "lucide-react": "^0.535.0",
-    "next": "15.4.5",
+    "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
